<resources>
    <string name="app_name">nuear</string>
    <string name="scales">scales</string>
    <string name="chromatism">chromatism</string>
    <string name="solfa">solfa</string>
    <string name="settings_button">settings_button</string>
    <string name="info_button">info_button</string>
    <string name="title_activity_info_activity">info_activity</string>
    <string name="title_activity_settings">settings</string>
    <string name="switch1">switch1</string>
    <string name="lang">Текущий язык:</string>
    <string name="fag">flag</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag1_text">sas???</string>
    <string name="log">SAS</string>
</resources>
